test/fail/fail_0.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_0.prsl:7:8: error: at 'n': Attempt to access an undef variable

fact = 1;

while (n > 0)
{
    fact = fact * n;
    n--;
}

print fact;